5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1671_1872.log
== TEST (2019-04-26 13:10:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = int(input("x1: "))
y1 = int(input("y1: "))
(x1 0) and (y1 0):

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif (x1 == 0) and (y1 > 0):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
-- ERROR:
File "XXXX", line 4
    (x1 0) and (y1 0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:14:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = int(input("x1: "))
y1 = int(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x1 = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:14:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:15:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:15:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:17:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:17:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:18:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:18:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- EXECUTION TIME:
0.186341
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:19:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:19:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:19:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:19:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:19:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
elif ((x1 > 0) and (y1 < 0)):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:20:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:20:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif (((x1 < 0) or (x1 > 0)) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- EXECUTION TIME:
0.138213
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:21:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif ((x1 < 0) or (x1 > 0) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:21:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif ((x1 < 0) or (x1 > 0) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- EXECUTION TIME:
0.112402
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:21:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif (x1 > 0) and (y1 > 0):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif (x1 < 0) and (y1 > 0):
	print("Q2")
elif (x1 < 0) and (y1 < 0):
	print("Q3")
elif ((x1 < 0) or (x1 > 0) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:22:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif ((x1 > 0) and (y1 > 0)):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif ((x1 < 0) and (y1 > 0)):
	print("Q2")
elif ((x1 < 0) and (y1 < 0)):
	print("Q3")
elif ((x1 < 0) or (x1 > 0) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:22:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x1 = float(input("x1: "))
y1 = float(input("y1: "))

if ((x1 == 0) and (y1 == 0)):
	print("Origem")
elif ((x1 > 0) and (y1 > 0)):
	print("Q1")
elif ((x1 == 0) and ((y1 > 0) or (y1 < 0))):
	print("Eixo y")
elif ((x1 < 0) and (y1 > 0)):
	print("Q2")
elif ((x1 < 0) and (y1 < 0)):
	print("Q3")
elif ((x1 < 0) or (x1 > 0) and (y1 == 0)):
	print("Eixo x")
else:
	print("Q4")
-- EXECUTION TIME:
0.191198
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:23:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:24:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- EXECUTION TIME:
0.230444
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:25:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:27:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:27:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:27:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:27:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:28:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- EXECUTION TIME:
0.17683
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:30:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:31:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:31:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:31:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:31:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:31:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:32:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:32:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:32:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 13:33:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo x")
else:
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 13:33:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))
if ((x == 0) and (y == 0)):
	print("Origem")
elif ((x > 0) and (y > 0)):
	print("Q1")
elif ((x == 0) and ((y > 0) or (y < 0))):
	print("Eixo Y")
elif ((x < 0) and (y > 0)):
	print("Q2")
elif ((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) or (x > 0) and (y == 0)):
	print("Eixo X")
else:
	print("Q4")
-- EXECUTION TIME:
0.149816
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
